--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,12 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+
+# OS generated files #
+######################
+.DS_Store?
+._*
+
+# Config file
+config.py
